engine-net-2/examples/Errors/FilterParameterErrorCompiled.grg
#include "Rules.grg"

sequence s1
{
	[?t\keepFirst("lol")]
}
